syntax = "proto3";

package scoring;


message Period {
  Date StartDate = 1;
  Date EndDate = 2;
}

message Date {
  int64 Date = 1;
}

message Score {
  int32 Score = 1;
}

message DateScore {
  string Date = 1;
  int32 Score = 2;
}

message CategoryScore {
  string CategoryName = 1;
  int32 Score = 2;
}

message ScoresByCategories {
  repeated ScoreByCategory ScoresByCategories = 1;
}

message ScoreByCategory {
  CategoryScore CategoryScore = 1;
  int32 Ratings = 2;
  repeated DateScore DateScores = 3;
}

message ScoreByTicket {
  int32 TicketId = 1;
  repeated CategoryScore CategoryScores = 2;
}

message ScoresByTickets {
  repeated ScoreByTicket ScoresByTickets = 1;
}

service ScoringService {
  rpc GetScoresByCategoriesForPeriod(Period) returns (ScoresByCategories) {}

  rpc GetScoresByTicketsForPeriod(Period) returns (ScoresByTickets) {}

  rpc GetOverallScoreForPeriod(Period) returns (Score) {}

  rpc GetOverallScoreChangeForPeriodRange(Period) returns (Score) {}
}
